--- a/src/main/resources/templates/includes/header.html
+++ b/src/main/resources/templates/includes/header.html
@@ -7,9 +7,16 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-
 <meta name="description" content="" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+<!-- Chrome, Firefox OS, Opera and Vivaldi -->
+<meta name="theme-color" content="#3F51B5"/>
+<!-- Windows Phone -->
+<meta name="msapplication-navbutton-color" content="#3F51B5"/>
+<!-- iOS Safari -->
+<meta name="apple-mobile-web-app-status-bar-style" content="#3F51B5"/>
+
 <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 <!-- Material Design fonts -->
 <link rel="stylesheet" type="text/css"
@@ -18,6 +25,8 @@
 	href="//fonts.googleapis.com/icon?family=Material+Icons" />
 <link rel="stylesheet"
 	th:href="@{/bower_components/bootstrap/dist/css/bootstrap.min.css}" />
+	
+	
 <style>
 body {
 	padding-top: 50px;
