--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
 			</div>
 			<div class="navbar-collapse collapse navbar-inverse-collapse">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">Home</a></li>
+					<li class="active"><a href="#/">Home</a></li>
 					<li><a href="#/users">Users</a></li>
 					<li><a href="javascript:void(0)">Link</a></li>
 					<li class="dropdown"><a href="bootstrap-elements.html"
