--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,8 +22,8 @@
 				<a class="navbar-brand" href="javascript:void(0)">Brand</a>
 			</div>
 			<div class="navbar-collapse collapse navbar-inverse-collapse">
-				<ul class="nav navbar-nav">
-					<li class="active"><a href="#/">Home</a></li>
+				<ul class="nav navbar-nav" auto-active>
+					<li><a href="#/">Home</a></li>
 					<li><a href="#/users">Users</a></li>
 					<li><a href="javascript:void(0)">Link</a></li>
 					<li class="dropdown"><a href="bootstrap-elements.html"
