--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
 				<a class="navbar-brand" href="javascript:void(0)">Brand</a>
 			</div>
 			<div class="navbar-collapse collapse navbar-inverse-collapse">
-				<ul class="nav navbar-nav" auto-active>
+				<ul class="nav navbar-nav" auto-active="auto-active">
 					<li><a href="#/">Home</a></li>
 					<li><a href="#/users">Users</a></li>
 					<li><a href="javascript:void(0)">Link</a></li>
