--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,25 +19,25 @@
 					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="javascript:void(0)">Brand</a>
+				<a class="navbar-brand" href="#/">Brand</a>
 			</div>
 			<div class="navbar-collapse collapse navbar-inverse-collapse">
 				<ul class="nav navbar-nav" auto-active="auto-active">
 					<li><a href="#/">Home</a></li>
 					<li><a href="#/users">Users</a></li>
-					<li><a href="javascript:void(0)">Link</a></li>
+					<li><a href="#/todo">Link</a></li>
 					<li class="dropdown"><a href="bootstrap-elements.html"
 						data-target="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown
 							<b class="caret"></b>
 					</a>
 						<ul class="dropdown-menu">
-							<li><a href="javascript:void(0)">Action</a></li>
-							<li><a href="javascript:void(0)">Another action</a></li>
-							<li><a href="javascript:void(0)">Something else here</a></li>
+							<li><a href="#/todo">Action</a></li>
+							<li><a href="#/todo">Another action</a></li>
+							<li><a href="#/todo">Something else here</a></li>
 							<li class="divider"></li>
 							<li class="dropdown-header">Dropdown header</li>
-							<li><a href="javascript:void(0)">Separated link</a></li>
-							<li><a href="javascript:void(0)">One more separated link</a></li>
+							<li><a href="#/todo">Separated link</a></li>
+							<li><a href="#/todo">One more separated link</a></li>
 						</ul></li>
 				</ul>
 				<form class="navbar-form navbar-left">
@@ -47,17 +47,17 @@
 					</div>
 				</form>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="javascript:void(0)">Link</a></li>
+					<li><a href="#/todo">Link</a></li>
 					<li class="dropdown"><a href="bootstrap-elements.html"
 						data-target="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown
 							<b class="caret"></b>
 					</a>
 						<ul class="dropdown-menu">
-							<li><a href="javascript:void(0)">Action</a></li>
-							<li><a href="javascript:void(0)">Another action</a></li>
-							<li><a href="javascript:void(0)">Something else here</a></li>
+							<li><a href="#/todo">Action</a></li>
+							<li><a href="#/todo">Another action</a></li>
+							<li><a href="#/todo">Something else here</a></li>
 							<li class="divider"></li>
-							<li><a href="javascript:void(0)">Separated link</a></li>
+							<li><a href="#/todo">Separated link</a></li>
 						</ul></li>
 				</ul>
 			</div>
