--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -62,10 +62,13 @@
 						</ul></li>
 				</ul>
 				<form class="navbar-form navbar-right">
-					<div class="togglebutton">
-						<label> <input type="checkbox" /><span class="toggle"></span>
-						</label>
+					<div class="form-group-sm">
+						<div class="togglebutton">
+							<label> <input type="checkbox" /><span class="toggle"></span>
+							</label>
+						</div>
 					</div>
+
 				</form>
 			</div>
 
